unpackaged/main/default/objects/FieldFormulaConfig__mdt/FieldFormulaConfig__mdt.object-meta.xml
<CustomObject>
    <label>Field Formula Config</label>
    <pluralLabel>FieldFormulaConfigs</pluralLabel>
</CustomObject>