unpackaged/main/default/objects/FieldFormulaConfig__mdt/fields/Return_Type__c.field-meta.xml
<CustomField>
    <fullName>Return_Type__c</fullName>
    <label>Return Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Boolean</fullName>
                <default>true</default>
                <label>Boolean</label>
            </value>
            <value>
                <fullName>Date</fullName>
            </value>
            <value>
                <fullName>Date Time</fullName>
            </value>
            <value>
                <fullName>Decimal</fullName>
            </value>
            <value>
                <fullName>Double</fullName>
            </value>
            <value>
                <fullName>Number</fullName>
            </value>
            <value>
                <fullName>String</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>