unpackaged/main/default/objects/FieldFormulaConfig__mdt/fields/Trigger_Condition__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Condition__c</fullName>
    <label>Trigger Condition</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>